Fullname Editing removed due to bugs. Personality can now be edited. Values now changing on lost focus instead of text changed.

--- a/HS2CharEdit/HS2CharEdit.csproj
+++ b/HS2CharEdit/HS2CharEdit.csproj
@@ -41,6 +41,7 @@
       <Pack>True</Pack>
       <PackagePath>\</PackagePath>
     </None>
+    <PackageReference Include="Octokit" Version="0.51.0" />
     <Resource Include="Digital-Patreon-Logo_FieryCoral.png" />
     <Resource Include="imagefile.ico" />
     <Resource Include="pplogo.png" />
